--- a/css/bootstrap-themed.css
+++ b/css/bootstrap-themed.css
@@ -95,6 +95,20 @@ html {
 @-ms-viewport {
   width: device-width; }
 
+#landing, #signin, #signup {
+  /* background: url("/static/img/background.jpg") no-repeat center center fixed; */
+  background: linear-gradient(to bottom, rgba(132,117,78, 0.5), rgba(132,117,78, 0.5)), url("/static/img/background.jpg") no-repeat center center fixed;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+
+}
+
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
 
@@ -379,6 +393,10 @@ hr {
   box-shadow: 0px 2px 4px grey;
   border: 0;
   border-top: 1px solid #034525; }
+
+.textshadow {
+  text-shadow: 0px 2px 4px #333;
+}
 
 small, .small {
   font-size: 80%;
