--- a/css/bootstrap-themed.css
+++ b/css/bootstrap-themed.css
@@ -97,7 +97,7 @@ html {
 
 #landing, #signin, #signup {
   /* background: url("/static/img/background.jpg") no-repeat center center fixed; */
-  background: linear-gradient(to bottom, rgba(132,117,78, 0.5), rgba(132,117,78, 0.5)), url("/static/img/background.jpg") no-repeat center center fixed;
+  background: linear-gradient(to bottom, rgba(132,117,78, 0.5), rgba(132,117,78, 0.5)), url("/static/img/background.jpg") no-repeat center right fixed;
   margin: 0;
   padding: 0;
   min-height: 100vh;
